Fixes the length of the pagination input
The current length is too short to show two 4 digit values like 1000 - 1025

--- a/src/main/resources/default/assets/wondergem/stylesheets/pagination.scss
+++ b/src/main/resources/default/assets/wondergem/stylesheets/pagination.scss
@@ -11,7 +11,7 @@
 // --------------------------------------------------
 .pagination .jump-to {
   float: left;
-  width: 90px;
+  width: 150px;
   padding: 4px 12px;
   margin-left: -1px;
   text-align:center;
